k8s/jaeger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
      - name: jaeger
        image: jaegertracing/all-in-one:latest
        args:
          - "--query.base-path=/jaeger"
        ports:
        - containerPort: 6831
          protocol: UDP
        - containerPort: 16686

---

apiVersion: v1
kind: Service
metadata:
  name: jaeger        # ← Bu isim önemli, kod içinde hardcoded
spec:
  selector:
    app: jaeger
  ports:
  - name: agent
    port: 6831
    targetPort: 6831
    protocol: UDP
  - name: ui
    port: 16686
    targetPort: 16686
