k8s/localstack.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: localstack
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: localstack
  template:
    metadata:
      labels:
        app: localstack
    spec:
      containers:
      - name: localstack
        image: localstack/localstack:2.0.2
        ports:
        - containerPort: 4566
        readinessProbe:
          httpGet:
            path: /_localstack/health
            port: 4566
          initialDelaySeconds: 10
          periodSeconds: 5
          failureThreshold: 5

---

apiVersion: v1
kind: Service
metadata:
  name: localstack   # Must match AWS_ENDPOINT_URL: http://localstack:4566 in configmap
  namespace: default
spec:
  selector:
    app: localstack
  ports:
  - port: 4566
    targetPort: 4566
