k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: habit-tracker-api-service
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: habit-tracker-api
  ports:
  - protocol: TCP
    port: 8001
    targetPort: 8000
